--- a/index.html
+++ b/index.html
@@ -90,47 +90,29 @@
 <pre class="prettyprint source lang-bash"><code>npm install --save node-spotify-youtube-downloader
 </code></pre>
 <p><em>Import</em></p>
-<pre class="prettyprint source lang-javascript"><code>const { download, tag } = require('node-spotify-youtube-downloader');
-download(...);
-tag(...)
-// OR
-const downloader = require('node-spotify-youtube-downloader');
-downloader.download(...);
-downloader.tag(...);
+<pre class="prettyprint source lang-javascript"><code>const { Downloader, METHODS } = require('node-spotify-youtube-downloader');
 </code></pre>
 <p><em>Download</em></p>
-<pre class="prettyprint source lang-javascript"><code>/* Download and tag songs */
-download({
-  /* URI of item to download
-  * Can be retrieved in spotify using right click -> share -> Copy Spotify URI
-  * ATM only playlist and album are supported */
-  spotifyURI: 'spotify:album:50Zz8CkIhATKUlQMbHO3k1',
-  /* Path to download files
-  Make sure this folder exists otherwise program will error */
-  downloadPath: '../download/',
-  /* Spotify web API Token */
-  spotifyToken: 'YOUR_TOKEN_HERE',
-  /* Range of items to download (1-n) as an array
-  Setting to undefined or omitting will cause all tracks to be used */
-  range: [2,4]
-}).then(() => {console.log('Download complete')}).catch(console.error);
+<pre class="prettyprint source lang-javascript"><code>new Downloader()
+  .output('../download_path/') /* Replace with null to receive track as buffer in final callback */
+  .spotifyURI('spotify:album:50Zz8CkIhATKUlQMbHO3k1')
+  .spotifyToken('YOUR_TOKEN_HERE')
+  .start()
+  .then((tracks) => {console.log('Download complete')})
+  .catch(console.error);
 </code></pre>
 <p><em>Tag</em></p>
 <pre class="prettyprint source lang-javascript"><code>/* Search for songs as they would be named by program and add the id3 tags from spotify
 Options have same syntax as download */
-tag({
-  spotifyURI: 'spotify:album:50Zz8CkIhATKUlQMbHO3k1',
-  downloadPath: '../download/',
-  spotifyToken: 'YOUR_TOKEN_HERE',
-  range: [2,4]
-}).then(() => {console.log('Tagging complete')}).catch(console.error);
-</code></pre>
-<h2>TODO</h2>
-<ul>
-<li>[ ] Add CLI</li>
-<li>[ ] Improve logging (download progress etc)</li>
-<li>[ ] Improve API</li>
-</ul></article>
+new Downloader()
+  .output('../download_path/')
+  .spotifyURI('spotify:album:50Zz8CkIhATKUlQMbHO3k1')
+  .spotifyToken('YOUR_TOKEN_HERE')
+  .method(METHODS.TAG)
+  .start()
+  .then((tracks) => {console.log('Download complete')})
+  .catch(console.error);
+</code></pre></article>
     </section>
 
 
@@ -171,8 +153,6 @@ tag({
 
 
 <footer>
-
-	Created by [Douile](https://github.com/Douile/)
 
 
 	<span class="copyright">
